syntax = "proto3";
import "google/protobuf/wrappers.proto";


option csharp_namespace = "ShoppyEx.Aggregator.Api.Protos";

package protos.package;

service TagGrpc {  	
   
    rpc GetTagById(TagByIdRequestMessage) returns (TagResponseMessage){}
    rpc GetTagAll(TagPageQueryRequestMessage) returns (TagListMessage){}
}
message TagPageQueryRequestMessage {

}
message TagByIdRequestMessage {    
    google.protobuf.StringValue Id = 1;
}

message TagListMessage {
    google.protobuf.Int32Value TotalCount = 1;
    repeated TagResponseMessage Items = 2;
}

message TagResponseMessage {    
    google.protobuf.StringValue Id = 1;
    google.protobuf.StringValue Name = 2;    
}



